# NCSD-tool

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  ExeFS.cpp  ExeFS.hpp  NCCH.cpp  NCCH.hpp  NCSD.cpp  NCSD.hpp  RomFS.cpp  RomFS.hpp  Scanner.cpp  Scanner.hpp  Types.hpp  main.cpp
tools/: audio.py  bcstm_to_wav.py  bcwav_to_wav.py  byteparser.py
